log
Sun Oct 25 17:15:24 UTC 2020: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:37:14: error: unused variable ‘newArray’ [-Werror=unused-variable]
   heapElem * newArray= (heapElem*) malloc (3 * sizeof (heapElem));
              ^~~~~~~~
heap.c:38:14: error: ‘nHeap’ is used uninitialized in this function [-Werror=uninitialized]
   nHeap->size= 0;
   ~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
Sun Oct 25 17:17:33 UTC 2020: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:19: error: ‘nHeap’ is used uninitialized in this function [-Werror=uninitialized]
   nHeap->heapArray= (heapElem*) malloc (3 * sizeof (heapElem));
   ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
Sun Oct 25 17:18:12 UTC 2020: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
491e069
Sun Oct 25 17:18:18 UTC 2020: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|3
total_score: 10/70
9ceaab2
Sun Oct 25 17:23:24 UTC 2020: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
1122d1a
Sun Oct 25 17:25:17 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
b9d1165
Sun Oct 25 17:26:16 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
98e3a6c
Sun Oct 25 17:26:35 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
890bb83
Sun Oct 25 17:26:56 UTC 2020: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
6c9449a
Sun Oct 25 17:28:23 UTC 2020: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
38fe52c
